changed base url

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ fb_app_id: 1660279814248162
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://joeandbeth2017.github.io
+url: http://www.joeandbeth2017.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
