--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,11 @@ bride: Beth
 groom : Joe
 date: 2016-08-12
 
+place:
+    name: St Christopher
+    city: Vandalia
+    state: Ohio
+
 colors:
     - "#A6B175"
     - "#C2A4BF"
@@ -19,12 +24,6 @@ fb_app_id: 1660279814248162
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: http://www.joeandbeth2017.com
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
 
 # GitHub only supports "kramdown" flavor of markdown
 # and "rouge" type of highlighter
